# trade-exchange

./: README.md  build_proto.sh  pyproject.toml
proto/: common.proto  info.proto  order_book.proto  risk_limits.proto
src/application/: application.py  config_schema.json
src/connection/: connection_handler.py  ip_address.py  message_codec.py  tcp_connection_manager.py
src/group_3_app/: connection_handler.py
src/group_3_app/common/: connection_storer.py  order.py  order_book.py  trade.py
src/group_3_app/info_service/: info_service.py  info_service_connection.py  subscriptions.py
src/group_3_app/orderbook_service/: orderbook_connection_handler.py  orderbook_service.py
src/group_3_app/risk_limits/: risk_limits_connection_handler.py  risk_limits_service.py  rolling_window.py  rolling_window_message_rate_limit.py  rolling_window_order_limit.py
src/sample_app/: README.md  connection_handler.py  main.py  sample_app_config.json
