[project]
name = "Optivex"
version = "0.1.0"
description = "Career Kickstarter - Optiver's Exchange"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flake8>=7.1.2",
    "flake8-mypy>=17.8.0",
    "jsonschema>=4.23.0",
    "mypy>=1.15.0",
    "mypy-protobuf>=3.6.0",
    "protobuf>=5.29.3",
    "pytest>=8.3.5",
    "types-jsonschema>=4.23.0.20241208",
    "types-protobuf>=5.29.1.20250208",
]

[project.scripts]
sample-app = "sample_app.main:main"
# order-book = "order_book.main:main"
# info = "info.main:main"
# risk-gateway = "risk_gateway.main:main"

[build-system]
requires = ["setuptools", "wheel", "uv"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.mypy]
exclude = "src/proto"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] (%(name)s) %(message)s"

log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] (%(name)s) %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
